# building2building

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
baselines/: README.md  analyze_tuned_controller.py  chs.py  compute_random_policy_reward_normalizers.py  eval_cross_domain.py  eval_dynamics_adaptation.py  eval_ppo.py  measure_eplus_rss_growth.py  run_reactive_control.py  train_cross_domain.py  train_dynamics_adaptation.py  train_ppo.py  train_sac.py  tune_controller.py  tune_ppo.py
baselines/analysis/: analyze_officemedium_control.py  analyze_officesmall_control.py
baselines/configs/: config.yaml
baselines/controllers/: __init__.py  air_loop.py  unitary_hvac.py
baselines/models/: __init__.py  amorpheus.py
baselines/plotting/: common.py  plot_chs_results.py  plot_cross_domain.py  plot_dynamics_adaptation.py  plot_ppo_specialist.py  plot_trajectory.py
baselines/scripts/: make_test_small_split.py  merge_baseline_returns.py
baselines/utils/: __init__.py  callbacks.py  evaluation.py  metadata.py  reward_normalizer_calibration.py  training.py
building2building/: __init__.py  env.py  geometry.py  morphology.py  scoring.py  store.py  types.py
building2building/api/: __init__.py  rl_wrappers.py  rollout.py
building2building/benchmarks/: __init__.py  action_space_transfer.py  base.py  cross_domain.py  dynamics_adaptation.py  goal_adaptation.py
building2building/config/: __init__.py  models.py  tasks.py
building2building/data/: __init__.py  climate_zones.py  download.py  registry.py  reward_normalizers.py  reward_normalizers.yaml
building2building/envs/: __init__.py  factory.py  registration.py
building2building/pipeline/: __init__.py  actuators.py  common.py  discovery.py  generate_dataset.py  generate_raw_dataset.py  parse_edd.py  parse_reports.py  simulation.py
building2building/scores/: baseline_returns.csv
building2building/simulator/: __init__.py  action_spaces.py  generator.py  observation_spaces.py  (+4 more)
tests/: PHASE_T_SWEEP.md  conftest.py
(+161 files in other folders)
